# azure-genesys-audiohook

./: .gitignore  README.md  azure.yaml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: lint.yml  package-server.yml  test.yml
client/: simple-client.py
docs/: architecture.drawio
infra/: main.bicep  main.parameters.json
infra/modules/: cognitive.bicep  containerapp-roles.bicep  containerapp.bicep  cosmosdb.bicep  eventhub.bicep  keyvault.bicep
server/python/: .dockerignore  .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  app.py  gunicorn.conf.py  models.py  pyproject.toml  server.py
server/python/app/: audio.py  const.py  conversations_store.py  database.py  enums.py  event_processor.py  identity.py  models.py  storage.py  websocket_server.py
server/python/app/events/: event_publisher.py
server/python/app/speech/: azure_ai_speech_provider.py  azure_openai_gpt4o_transcriber.py  speech_provider.py
server/python/app/storage/: base_conversation_store.py  conversation_store.py  cosmos_db_conversation_store.py  in_memory_conversation_store.py
server/python/app/utils/: audio.py  storage.py
server/python/static/: index.html
server/python/static/assets/: index--skxYOTT.css  index-B7ygVG-l.js  index-B8Pi-s2U.js  index-BCrCaWOy.css  index-CKU1sTT5.js  index-CM3E1MKX.js  index-Cfc79WMf.js  index-Cslkrz3i.js  index-DobNUK1L.js  index-DweKYb6f.js  index-KQi--9Ty.js  index-LU2ZGSId.js  index-RvnOIZGx.css
server/python/tests/: test_websocket_server.py
